# embedded_rust-bbcMicrochipV2

./: README.md
blinky/: Cargo.toml
blinky/src/: main.rs
clap_switch/: Cargo.toml  ClapSwitch.txt  Embed.toml
clap_switch/.cargo/: config.toml
clap_switch/src/: main.rs
print_name/: Cargo.toml  memory.x
print_name/src/: main.rs
