[package]
name = "clap_switch"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = "1.0.0"
microbit-v2 = "0.15.1"
panic-probe = "0.3.2"
rtt-target = { version = "0.2.1", features = ["cortex-m"] }